--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version 2.1
+version: 2.1
 orbs: 
   node: circleci/node@1.1
 jobs:
@@ -12,7 +12,7 @@ jobs:
       steps:
         - run: npm install
      - run: npm run test
-     
+
 
 
 
